# hopen

./: .gitignore  Cargo.toml  Dockerfile.test  README.md  SHARED_TASK_NOTES.md  hopen.zsh  run_tests.sh
.github/workflows/: test.yml
Formula/: hopen.rb
src/: main.rs
tests/: docker-entrypoint.sh  test_rust.sh  test_zsh.zsh
